--- a/platformio.ini
+++ b/platformio.ini
@@ -18,23 +18,55 @@ upload_speed = 921600
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
-; board_build.partitions = huge_app.csv
-; board_build.partitions = partitions.csv
-
 lib_deps = 
 	adafruit/Adafruit SSD1306@^2.5.9
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
-	fastled/FastLED@^3.6.0
+	fastled/FastLED@^3.7.0
+	knolleary/PubSubClient@^2.8
+build_flags = 
+    -std=gnu++17
+	-DARDUINO_USB_CDC_ON_BOOT=1
 
-[env:necklace]
+[env:necklace_mqtt]
+build_flags = 
+    -D NECKLACE_V_1_3
+    -D MQTT
+
+[env:general_mqtt]
+extends = env:general, env:mqtt
+
+[env:necklace_espnow]
+build_flags = 
+    -D NECKLACE_V_1_3
+    -D ESPNOW
+	
+[env:general_espnow]
+extends = env:general, env:espnow
+
+
+; デバイスごとの環境設定
+[hidden_env:necklace]
 build_flags = 
 	-D NECKLACE
 
-[env:necklace_v1_3]
+[hidden_env:necklace_v1_3]
 build_flags = 
 	-D NECKLACE_V_1_3
 
-[env:general]
+[hidden_env:general]
 build_flags = 
 	-D GENERAL
+
+; アプリケーションごとの環境設定
+[hidden_env:espnow]
+build_flags = 
+	-D ESPNOW
+
+[hidden_env:mqtt]
+build_flags = 
+	-D MQTT
+
+
+
+
