--- a/config.h.template
+++ b/config.h.template
@@ -2,8 +2,9 @@
 #define CONFIG_H
 
 // Wi-Fi設定
-inline const char* ssid = "YOUR_SSID";
-inline const char* password = "YOUR_PASSWORD";
-inline const char* mqttServer = "YOUR_MQTT_SERVER";
+#define SSID "YOUR_SSID"
+#define PASSWORD "YOUR_PASSWORD"
+#define MQTT_SERVER "YOUR_MQTT_SERVE"
+#define MQTT_PORT "port_number_int"
 
 #endif  // CONFIG_H
