--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
-board = esp32-s3-devkitc-1
+board = esp32-s3-devkitm-1
 board_build.mcu = esp32s3
 board_build.f_cpu = 240000000L
 upload_protocol = esptool
