General で動作確認

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,9 @@ build_flags =
     -D MQTT
 
 [env:general_mqtt]
-extends = env:general, env:mqtt
+build_flags = 
+    -D GENERAL
+    -D MQTT
 
 [env:necklace_espnow]
 build_flags = 
@@ -42,8 +44,9 @@ build_flags =
     -D ESPNOW
 	
 [env:general_espnow]
-extends = env:general, env:espnow
-
+build_flags = 
+    -D GENERAL
+    -D ESPNOW
 
 ; デバイスごとの環境設定
 [hidden_env:necklace]
