ピン配置とパラメータを別ファイルに移動、もろもろリファクタリング（動作確認まだ）

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,6 +48,11 @@ build_flags =
     -D GENERAL
     -D ESPNOW
 
+[env:general_v2_espnow]
+build_flags = 
+    -D GENERAL_V2
+    -D ESPNOW
+
 ; デバイスごとの環境設定
 [hidden_env:necklace]
 build_flags = 
