メモリリーク修正

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,7 +43,7 @@ build_flags =
     -D NECKLACE_V_1_3
     -D ESPNOW
 	
-[env:general_espnow]
+[hidden_env:general_espnow]
 build_flags = 
     -D GENERAL
     -D ESPNOW
