MQTT gen_v2 動作確認

--- a/config.h.template
+++ b/config.h.template
@@ -4,9 +4,15 @@
 #define CONFIG_H
 
 // Wi-Fi設定
-#define SSID "YOUR_SSID"
-#define PASSWORD "YOUR_PASSWORD"
-#define MQTT_SERVER "YOUR_MQTT_SERVE"
-#define MQTT_PORT "port_number_int"
+#define WIFI_SSID "YOUR_SSID"
+#define WIFI_PASSWORD "YOUR_PASSWORD"
+
+// MQTT設定
+#define MQTT_SERVER "MQTT_SERVE"
+#define MQTT_PORT "PORT_NUMBER_INT" // MQTT over TLS/SSL ポート
+#define MQTT_USERNAME "MQTT_USERNAME"
+#define MQTT_PASSWORD "MQTT_PASSWORD"
+#define MQTT_TOPIC "MQTT_TOPIC"
+#define MQTT_CERTIFICATE "MQTT_CERTIFICATE"
 
 #endif  // CONFIG_H
