--- a/platformio.ini
+++ b/platformio.ini
@@ -35,7 +35,7 @@ build_flags =
 
 [env:general_mqtt]
 build_flags = 
-    -D GENERAL
+    -D GENERAL_V2
     -D MQTT
 
 [env:necklace_espnow]
@@ -43,12 +43,7 @@ build_flags =
     -D NECKLACE_V_1_3
     -D ESPNOW
 	
-[hidden_env:general_espnow]
-build_flags = 
-    -D GENERAL
-    -D ESPNOW
-
-[env:general_v2_espnow]
+[env:general_espnow]
 build_flags = 
     -D GENERAL_V2
     -D ESPNOW
@@ -61,10 +56,6 @@ build_flags =
 [hidden_env:necklace_v1_3]
 build_flags = 
 	-D NECKLACE_V_1_3
-
-[hidden_env:general]
-build_flags = 
-	-D GENERAL
 
 ; アプリケーションごとの環境設定
 [hidden_env:espnow]
