--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,6 @@ lib_deps =
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
 	fastled/FastLED@^3.7.0
-	knolleary/PubSubClient@^2.8
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
@@ -32,12 +31,19 @@ build_flags =
 build_flags = 
     -D NECKLACE_V_1_3
     -D MQTT
+lib_deps = 
+	${env.lib_deps}
+	256dpi/MQTT @ ^2.5.2
+
 
 [env:general_mqtt]
 build_flags = 
     -D GENERAL_V2
     -D MQTT
 	-D COLOR_SENSOR
+lib_deps = 
+	${env.lib_deps}
+	256dpi/MQTT @ ^2.5.2
 
 [env:necklace_espnow]
 build_flags = 
