--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,8 @@ lib_deps =
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
 	fastled/FastLED@^3.7.0
+	256dpi/MQTT @ ^2.5.2
+
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
