MQTTインクルードしてしまう問題解消

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,13 +23,11 @@ lib_deps =
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
 	fastled/FastLED@^3.7.0
-	256dpi/MQTT @ ^2.5.2
 
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
-
 
 [env:necklace_mqtt]
 build_flags = 
@@ -38,7 +36,6 @@ build_flags =
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
-
 
 [env:general_mqtt]
 build_flags = 
@@ -53,7 +50,18 @@ lib_deps =
 build_flags = 
     -D NECKLACE_V_1_3
     -D ESPNOW
-	
+lib_ignore = MQTT_manager
+
+[env:necklaceNew_espnow]
+build_flags = 
+    -D NECKLACE_V_1_3
+	-D NECKLACE_V_1_4
+    -D ESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
 [env:general_espnow]
 build_flags = 
     -D GENERAL_V2
