ボリューム閾値をステップ単位に変更、ビルドフラグの変更変更

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ build_flags =
 
 [env:necklace_mqtt]
 build_flags = 
-    -D NECKLACE_V_1_3
+    -D NECKLACE_V2
     -D MQTT
 lib_deps = 
 	${env.lib_deps}
@@ -46,16 +46,16 @@ lib_deps =
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
-[env:necklace_espnow]
+[env:neck_V2_espnow]
 build_flags = 
-    -D NECKLACE_V_1_3
+    -D NECKLACE_V2
     -D ESPNOW
 lib_ignore = MQTT_manager
 
-[env:necklaceNew_espnow]
+[env:neck_V3_espnow]
 build_flags = 
-    -D NECKLACE_V_1_3
-	-D NECKLACE_V_1_4
+    -D NECKLACE_V2
+	-D NECKLACE_V3
     -D ESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
@@ -74,7 +74,7 @@ build_flags =
 
 [hidden_env:necklace_v1_3]
 build_flags = 
-	-D NECKLACE_V_1_3
+	-D NECKLACE_V2
 
 ; アプリケーションごとの環境設定
 [hidden_env:espnow]
