--- a/platformio.ini
+++ b/platformio.ini
@@ -37,9 +37,9 @@ lib_deps =
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
-[env:general_mqtt]
+[env:band_V2_mqtt]
 build_flags = 
-    -D GENERAL_V2
+    -D BAND_V2
     -D MQTT
 	-D COLOR_SENSOR
 lib_deps = 
@@ -62,10 +62,11 @@ lib_deps =
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 
-[env:general_espnow]
+[env:band_V2_espnow]
 build_flags = 
-    -D GENERAL_V2
+    -D BAND_V2
     -D ESPNOW
+lib_ignore = MQTT_manager
 
 ; デバイスごとの環境設定
 [hidden_env:necklace]
