band_mqtt_local動作確認&他の環境のビルド確認

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,7 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
 
+; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
 [env:necklace_mqtt]
 build_flags = 
     -D NECKLACE_V2
@@ -42,10 +43,23 @@ build_flags =
     -D BAND_V2
     -D MQTT
 	-D COLOR_SENSOR
+	-D INTERNET
+lib_deps = 
+	${env.lib_deps}
+	256dpi/MQTT @ ^2.5.2
+; MQTT Local
+[env:band_V2_mqtt_local]
+build_flags = 
+    -D BAND_V2
+    -D MQTT
+	-D COLOR_SENSOR
+	-D LOCAL
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
+
+; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 [env:neck_V2_espnow]
 build_flags = 
     -D NECKLACE_V2
