環境名訂正

--- a/platformio.ini
+++ b/platformio.ini
@@ -29,12 +29,9 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
 
-
-
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
-
-[env:DuoWL-V3_ESPNOW]
+[env:DuoWL_V3-ESPNOW]
 build_flags = 
     -D NECKLACE_V2
 	-D NECKLACE_V3
@@ -51,14 +48,14 @@ build_flags =
 lib_ignore = MQTT_manager
 
 
-[env:BandWL__V2-ESPNOW]
+[env:BandWL_V2-ESPNOW]
 build_flags = 
     -D NECKLACE_V2
     -D ESPNOW
 lib_ignore = MQTT_manager
 
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
-[env:necklace-MQTT]
+[env:DuoWL_V2-MQTT]
 build_flags = 
     -D NECKLACE_V2
     -D MQTT
