変数名の変更、BandWL V3 動作確認

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,23 +34,28 @@ build_flags =
 [env:DuoWL_V3-ESPNOW]
 build_flags = 
     -D NECKLACE_V2
-	-D NECKLACE_V3
+	-D EN_MCP4018
     -D ESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 
+[env:BandWL_V3-ESPNOW]
+build_flags = 
+    -D BAND_V3
+    -D BAND_V2
+	-D EN_MCP4018
+    -D ESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
+
 [env:BandWL_V2-ESPNOW]
 build_flags = 
     -D BAND_V2
-    -D ESPNOW
-lib_ignore = MQTT_manager
-
-
-[env:BandWL_V2-ESPNOW]
-build_flags = 
-    -D NECKLACE_V2
     -D ESPNOW
 lib_ignore = MQTT_manager
 
