--- a/platformio.ini
+++ b/platformio.ini
@@ -23,11 +23,11 @@ lib_deps =
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
 	fastled/FastLED@^3.7.0
-
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
+extra_scripts = pre:./extra_script.py
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
@@ -51,7 +51,6 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-
 
 [env:BandWL_V2-ESPNOW]
 build_flags = 
