--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,7 @@ build_flags =
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
+	; -D DEBUG
 extra_scripts = pre:./extra_script.py
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
@@ -36,6 +37,7 @@ build_flags =
     -D NECKLACE_V2
 	-D EN_MCP4018
     -D ESPNOW
+	-D DEBUG_WL
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
