--- a/platformio.ini
+++ b/platformio.ini
@@ -22,12 +22,11 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.9
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
-	fastled/FastLED@^3.7.0
+	fastled/FastLED@3.7.0
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
-	; -D DEBUG
 extra_scripts = pre:./extra_script.py
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
