--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,7 @@ build_flags =
     -D NECKLACE_V2
 	-D EN_MCP4018
     -D ESPNOW
-	-D DEBUG_WL
+	; -D DEBUG_WL
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -48,6 +48,7 @@ build_flags =
     -D BAND_V2
 	-D EN_MCP4018
     -D ESPNOW
+	; -D DEBUG_WL
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
