--- a/platformio.ini
+++ b/platformio.ini
@@ -48,7 +48,7 @@ build_flags =
     -D BAND_V2
 	-D EN_MCP4018
     -D ESPNOW
-	; -D DEBUG_WL
+	-D DEBUG_WL
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -60,6 +60,16 @@ build_flags =
     -D ESPNOW
 lib_ignore = MQTT_manager
 
+
+[env:DuoWL_V2-ESPNOW]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
 [env:DuoWL_V2-MQTT]
 build_flags = 
