--- a/platformio.ini
+++ b/platformio.ini
@@ -58,6 +58,7 @@ lib_deps =
 build_flags = 
     -D BAND_V2
     -D ESPNOW
+	-D DEBUG_WL
 lib_ignore = MQTT_manager
 
 
@@ -75,6 +76,7 @@ lib_deps =
 build_flags = 
     -D NECKLACE_V2
     -D MQTT
+	-D DEBUG_WL
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
@@ -85,6 +87,7 @@ build_flags =
     -D MQTT
 	-D COLOR_SENSOR
 	-D INTERNET
+	-D DEBUG_WL
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
