--- a/platformio.ini
+++ b/platformio.ini
@@ -71,6 +71,21 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
+; ; ; ; ; ; ; Wired ; ; ; ; ; ; ; ; ; 
+
+[env:DuoWL_V3-Wired]
+build_flags = 
+    -D NECKLACE_V2
+    -D WIRED
+	-D DEBUG_WL
+	-D EN_MCP4018
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
+
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
 [env:DuoWL_V2-MQTT]
 build_flags = 
