--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,32 @@ build_flags =
 	-I include
 extra_scripts = pre:./extra_script.py
 
+
+; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
+
+[env:DuoWL_V3-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V2
+	-D EN_MCP4018
+    -D ESPNOW
+	-D DEBUG_WL
+	-D JUDO0806
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
+[env:DuoWL_V2-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+	-D JUDO0806
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
 [env:DuoWL_V3-ESPNOW]
