バッテリー表示実装（細かい点はまだ）

--- a/platformio.ini
+++ b/platformio.ini
@@ -74,6 +74,7 @@ build_flags =
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
+	-D BAT_DEBUG
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
