リファクタリング、Bandの電池残量表示（ネックレスの動作確認はまだ）

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,7 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
 	-D JUDO0806
+    -D TASK_JUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -49,6 +50,7 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
 	-D JUDO0806
+    -D TASK_JUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -62,6 +64,7 @@ build_flags =
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
+    -D TASK_ESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -74,7 +77,8 @@ build_flags =
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
-	-D BAT_DEBUG
+	-D TASK_BAND_ESPNOW
+	; -D BAT_DEBUG
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -85,6 +89,7 @@ build_flags =
     -D BAND_V2
     -D ESPNOW
 	-D DEBUG_WL
+    -D TASK_ESPNOW
 lib_ignore = MQTT_manager
 
 
@@ -93,6 +98,7 @@ build_flags =
     -D NECKLACE_V2
     -D ESPNOW
 	-D DEBUG_WL
+    -D TASK_ESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -106,6 +112,7 @@ build_flags =
     -D WIRED
 	-D DEBUG_WL
 	-D EN_MCP4018
+    -D TASK_WIRED
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -118,6 +125,7 @@ build_flags =
     -D NECKLACE_V2
     -D MQTT
 	-D DEBUG_WL
+    -D TASK_MQTT
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
@@ -129,6 +137,7 @@ build_flags =
 	-D COLOR_SENSOR
 	-D INTERNET
 	-D DEBUG_WL
+    -D TASK_MQTT
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
