task名リネーム

--- a/platformio.ini
+++ b/platformio.ini
@@ -58,51 +58,43 @@ lib_deps =
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
-[env:DuoWL_V3-ESPNOW]
+[env:DuoWL_V3_GEN_ESPNOW]
 build_flags = 
     -D NECKLACE_V2
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
-    -D TASK_ESPNOW
+    -D TASK_NECK_GEN_ESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 
-[env:BandWL_V3-ESPNOW]
+[env:DuoWL_V2_GEN_ESPNOW]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_GEN_ESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+
+[env:BandWL_V3_GEN_ESPNOW]
 build_flags = 
     -D BAND_V3
     -D BAND_V2
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
-	-D TASK_BAND_ESPNOW
+	-D TASK_BAND_GEN_ESPNOW
 	; -D BAT_DEBUG
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 
-[env:BandWL_V2-ESPNOW]
-build_flags = 
-    -D BAND_V2
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_ESPNOW
-lib_ignore = MQTT_manager
-
-
-[env:DuoWL_V2-ESPNOW]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_ESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 
 ; ; ; ; ; ; ; Wired ; ; ; ; ; ; ; ; ; 
 
@@ -112,7 +104,7 @@ build_flags =
     -D WIRED
 	-D DEBUG_WL
 	-D EN_MCP4018
-    -D TASK_WIRED
+    -D TASK_NECK_GEN_WIRED
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -120,15 +112,6 @@ lib_deps =
 
 
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
-[env:DuoWL_V2-MQTT]
-build_flags = 
-    -D NECKLACE_V2
-    -D MQTT
-	-D DEBUG_WL
-    -D TASK_MQTT
-lib_deps = 
-	${env.lib_deps}
-	256dpi/MQTT @ ^2.5.2
 
 [env:BandWL_V2-MQTT]
 build_flags = 
@@ -137,7 +120,7 @@ build_flags =
 	-D COLOR_SENSOR
 	-D INTERNET
 	-D DEBUG_WL
-    -D TASK_MQTT
+    -D TASK_BAND_GEN_MQTT
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
@@ -172,4 +155,10 @@ build_flags =
 
 
 
-
+[hidden_env:BandWL_V2_GEN_ESPNOW]
+build_flags = 
+    -D BAND_V2
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_BAND_GEN_ESPNOW
+lib_ignore = MQTT_manager
