新しく task を追加しやすいように修正

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,11 +38,12 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
 	-D JUDO0806
-    -D TASK_JUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
 
 [env:DuoWL_V2-ESPNOW_JUDO0806]
 build_flags = 
@@ -50,11 +51,12 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
 	-D JUDO0806
-    -D TASK_JUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
@@ -69,6 +71,8 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
 
 [env:DuoWL_V2_GEN_ESPNOW]
 build_flags = 
@@ -80,6 +84,8 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
 
 [env:BandWL_V3_GEN_ESPNOW]
 build_flags = 
@@ -94,6 +100,8 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskBandGenESPNOW/>
 
 
 ; ; ; ; ; ; ; Wired ; ; ; ; ; ; ; ; ; 
@@ -109,6 +117,8 @@ lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckGenWIRED/>
 
 
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
@@ -124,6 +134,8 @@ build_flags =
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskBandGenMQTT/>
 ; MQTT Local
 [env:BandWL_V2-MQTT_local]
 build_flags = 
