audioManger.h の設定を、各タスクディレクトリで規定するように変更

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,7 +37,8 @@ build_flags =
 	-D EN_MCP4018
     -D ESPNOW
 	-D DEBUG_WL
-	-D JUDO0806
+	-D TASK_JUDO0806
+    -I src/tasks/taskJUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -50,7 +51,8 @@ build_flags =
     -D NECKLACE_V2
     -D ESPNOW
 	-D DEBUG_WL
-	-D JUDO0806
+	-D TASK_JUDO0806
+    -I src/tasks/taskJUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -67,6 +69,7 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
     -D TASK_NECK_GEN_ESPNOW
+    -I src/tasks/taskNeckGenESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -80,6 +83,7 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
     -D TASK_NECK_GEN_ESPNOW
+    -I src/tasks/taskNeckGenESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -96,14 +100,15 @@ build_flags =
 	-D DEBUG_WL
 	-D TASK_BAND_GEN_ESPNOW
 	; -D BAT_DEBUG
+    -I src/tasks/taskBandGenESPNOW
+
+
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
     +<*> -<tasks/*> +<tasks/taskBandGenESPNOW/>
-
-
 ; ; ; ; ; ; ; Wired ; ; ; ; ; ; ; ; ; 
 
 [env:DuoWL_V3-Wired]
@@ -113,6 +118,7 @@ build_flags =
 	-D DEBUG_WL
 	-D EN_MCP4018
     -D TASK_NECK_GEN_WIRED
+    -I src/tasks/taskNeckGenWIRED
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -131,6 +137,7 @@ build_flags =
 	-D INTERNET
 	-D DEBUG_WL
     -D TASK_BAND_GEN_MQTT
+    -I src/tasks/taskBandGenMQTT
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
