chore(1.0.x): bump to v1.0.1-color_sensor and fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,21 +22,11 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.9
 	tanakamasayuki/efont Unicode Font Data@^1.0.9
 	earlephilhower/ESP8266Audio@^1.9.7
-	fastled/FastLED@^3.7.0
+	fastled/FastLED@3.7.0
 build_flags = 
     -std=gnu++17
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
-
-
-[env:necklace_mqtt]
-build_flags = 
-    -D NECKLACE_V_1_3
-    -D MQTT
-lib_deps = 
-	${env.lib_deps}
-	256dpi/MQTT @ ^2.5.2
-
 
 [env:general_mqtt]
 build_flags = 
@@ -46,35 +36,3 @@ build_flags =
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
-
-[env:necklace_espnow]
-build_flags = 
-    -D NECKLACE_V_1_3
-    -D ESPNOW
-	
-[env:general_espnow]
-build_flags = 
-    -D GENERAL_V2
-    -D ESPNOW
-
-; デバイスごとの環境設定
-[hidden_env:necklace]
-build_flags = 
-	-D NECKLACE
-
-[hidden_env:necklace_v1_3]
-build_flags = 
-	-D NECKLACE_V_1_3
-
-; アプリケーションごとの環境設定
-[hidden_env:espnow]
-build_flags = 
-	-D ESPNOW
-
-[hidden_env:mqtt]
-build_flags = 
-	-D MQTT
-
-
-
-
