platformio.iniの設定を整理し、readmeに複数台への一括書き込み手順を追加。adjustParams.hppでCATEGORY_ID_TXT_SIZEの計算方法を修正。

--- a/platformio.ini
+++ b/platformio.ini
@@ -101,8 +101,6 @@ build_flags =
 	-D TASK_BAND_GEN_ESPNOW
 	; -D BAT_DEBUG
     -I src/tasks/taskBandGenESPNOW
-
-
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -154,30 +152,32 @@ lib_deps =
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
-; デバイスごとの環境設定
-[hidden_env:necklace]
-build_flags = 
-	-D NECKLACE
 
-[hidden_env:necklace_v1_3]
-build_flags = 
-	-D NECKLACE_V2
+;;;;; アーカイブ用 ;;;;;
+; ; デバイスごとの環境設定
+; [hidden_env:necklace]
+; build_flags = 
+; 	-D NECKLACE
 
-; アプリケーションごとの環境設定
-[hidden_env:espnow]
-build_flags = 
-	-D ESPNOW
+; [hidden_env:necklace_v1_3]
+; build_flags = 
+; 	-D NECKLACE_V2
 
-[hidden_env:mqtt]
-build_flags = 
-	-D MQTT
+; ; アプリケーションごとの環境設定
+; [hidden_env:espnow]
+; build_flags = 
+; 	-D ESPNOW
+
+; [hidden_env:mqtt]
+; build_flags = 
+; 	-D MQTT
 
 
 
-[hidden_env:BandWL_V2_GEN_ESPNOW]
-build_flags = 
-    -D BAND_V2
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_BAND_GEN_ESPNOW
-lib_ignore = MQTT_manager
+; [hidden_env:BandWL_V2_GEN_ESPNOW]
+; build_flags = 
+;     -D BAND_V2
+;     -D ESPNOW
+; 	-D DEBUG_WL
+;     -D TASK_BAND_GEN_ESPNOW
+; lib_ignore = MQTT_manager
