--- a/platformio.ini
+++ b/platformio.ini
@@ -77,6 +77,21 @@ lib_deps =
 build_src_filter =
     +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
 
+[env:DuoWL_V3_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V3
+	-D EN_MCP4018
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckDemoESPNOW/>
+
 [env:DuoWL_V2_GEN_ESPNOW]
 build_flags = 
     -D NECKLACE_V2
@@ -90,6 +105,20 @@ lib_deps =
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
     +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
+
+[env:DuoWL_V2_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckDemoESPNOW/>
 
 [env:BandWL_V3_GEN_ESPNOW]
 build_flags = 
