--- a/platformio.ini
+++ b/platformio.ini
@@ -38,13 +38,13 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
 	-D TASK_JUDO0806
-    -I src/tasks/taskJUDO0806
+	    -I src/private_tasks/taskJUDO0806
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
 
 [env:DuoWL_V2-ESPNOW_JUDO0806]
 build_flags = 
@@ -69,13 +69,13 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
     -D TASK_NECK_GEN_ESPNOW
-    -I src/tasks/taskNeckGenESPNOW
+    -I src/public_tasks/taskNeckGenESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<public_tasks/taskNeckGenESPNOW/>
 
 [env:DuoWL_V3_DEMO_ESPNOW]
 build_flags = 
@@ -84,13 +84,13 @@ build_flags =
     -D ESPNOW
 	-D DEBUG_WL
     -D TASK_NECK_DEMO_ESPNOW
-    -I src/tasks/taskNeckDemoESPNOW
+    -I src/private_tasks/taskNeckDemoESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskNeckDemoESPNOW/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
 
 [env:DuoWL_V2_GEN_ESPNOW]
 build_flags = 
@@ -128,13 +128,13 @@ build_flags =
 	-D DEBUG_WL
 	-D TASK_BAND_GEN_ESPNOW
 	; -D BAT_DEBUG
-    -I src/tasks/taskBandGenESPNOW
+	    -I src/public_tasks/taskBandGenESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskBandGenESPNOW/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<public_tasks/taskBandGenESPNOW/>
 ; ; ; ; ; ; ; Wired ; ; ; ; ; ; ; ; ; 
 
 [env:DuoWL_V3-Wired]
@@ -144,13 +144,13 @@ build_flags =
 	-D DEBUG_WL
 	-D EN_MCP4018
     -D TASK_NECK_GEN_WIRED
-    -I src/tasks/taskNeckGenWIRED
+    -I src/public_tasks/taskNeckGenWIRED
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskNeckGenWIRED/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<public_tasks/taskNeckGenWIRED/>
 
 
 ; ; ; ; ; ; ; MQTT ; ; ; ; ; ; ; ; ; 
@@ -163,12 +163,12 @@ build_flags =
 	-D INTERNET
 	-D DEBUG_WL
     -D TASK_BAND_GEN_MQTT
-    -I src/tasks/taskBandGenMQTT
+    -I src/public_tasks/taskBandGenMQTT
 lib_deps = 
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskBandGenMQTT/>
+	+<*> -<public_tasks/*> -<private_tasks/*> +<public_tasks/taskBandGenMQTT/>
 ; MQTT Local
 [env:BandWL_V2-MQTT_local]
 build_flags = 
