build: load private envs from src/private_tasks/platformio.private.ini; simplify root platformio.ini; deprecate platformio.private.example.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,37 +28,7 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
 extra_scripts = pre:./extra_script.py
-
-; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
-
-[env:DuoWL_V3-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V3
-	-D EN_MCP4018
-    -D ESPNOW
-	-D DEBUG_WL
-	-D TASK_JUDO0806
-	    -I src/private_tasks/taskJUDO0806
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-	+<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
-
-[env:DuoWL_V2-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-	-D DEBUG_WL
-	-D TASK_JUDO0806
-    -I src/tasks/taskJUDO0806
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
+extra_configs = src/private_tasks/platformio.private.ini
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
@@ -77,48 +47,6 @@ lib_deps =
 build_src_filter =
 	+<*> -<sample_tasks/*> -<private_tasks/*> +<sample_tasks/taskNeckGenESPNOW/>
 
-[env:DuoWL_V3_DEMO_ESPNOW]
-build_flags = 
-    -D NECKLACE_V3
-	-D EN_MCP4018
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_NECK_DEMO_ESPNOW
-    -I src/private_tasks/taskNeckDemoESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-	+<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
-
-[env:DuoWL_V2_GEN_ESPNOW]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_NECK_GEN_ESPNOW
-    -I src/tasks/taskNeckGenESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
-
-[env:DuoWL_V2_DEMO_ESPNOW]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-	-D DEBUG_WL
-    -D TASK_NECK_DEMO_ESPNOW
-    -I src/tasks/taskNeckDemoESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskNeckDemoESPNOW/>
 
 [env:BandWL_V3_GEN_ESPNOW]
 build_flags = 
@@ -180,32 +108,3 @@ lib_deps =
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
-
-;;;;; アーカイブ用 ;;;;;
-; ; デバイスごとの環境設定
-; [hidden_env:necklace]
-; build_flags = 
-; 	-D NECKLACE
-
-; [hidden_env:necklace_v1_3]
-; build_flags = 
-; 	-D NECKLACE_V2
-
-; ; アプリケーションごとの環境設定
-; [hidden_env:espnow]
-; build_flags = 
-; 	-D ESPNOW
-
-; [hidden_env:mqtt]
-; build_flags = 
-; 	-D MQTT
-
-
-
-; [hidden_env:BandWL_V2_GEN_ESPNOW]
-; build_flags = 
-;     -D BAND_V2
-;     -D ESPNOW
-; 	-D DEBUG_WL
-;     -D TASK_BAND_GEN_ESPNOW
-; lib_ignore = MQTT_manager
