build: move extra_configs to [platformio] so private envs are loaded

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = src/private_tasks/platformio.private.ini
+
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
 board = esp32-s3-devkitm-1
@@ -28,7 +31,6 @@ build_flags =
 	-DARDUINO_USB_CDC_ON_BOOT=1
 	-I include
 extra_scripts = pre:./extra_script.py
-extra_configs = src/private_tasks/platformio.private.ini
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
