dev: restore private tasks taskJUDO0806 and taskNeckDemoESPNOW with envs

--- a/src/private_tasks/platformio.private.ini
+++ b/src/private_tasks/platformio.private.ini
@@ -40,4 +40,34 @@ lib_deps =
 build_src_filter =
     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckGenWIRED/>
 
+[env:DuoWL_V3-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V3
+    -D EN_MCP4018
+    -D ESPNOW
+    -D DEBUG_WL
+    -D TASK_JUDO0806
+    -I src/private_tasks/taskJUDO0806
+lib_ignore = MQTT_manager
+lib_deps = 
+    ${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
+
+[env:DuoWL_V3_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V3
+    -D EN_MCP4018
+    -D ESPNOW
+    -D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/private_tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+    ${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
+
 
