--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[platformio]
-extra_configs = src/private_tasks/platformio.private.ini
-
 [env]
 platform = https://github.com/platformio/platform-espressif32.git
 board = esp32-s3-devkitm-1
@@ -34,6 +31,37 @@ extra_scripts = pre:./extra_script.py
 
 ; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
 
+[env:DuoWL_V3-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V3
+	-D EN_MCP4018
+    -D ESPNOW
+	-D DEBUG_WL
+	-D TASK_JUDO0806
+	    -I src/private_tasks/taskJUDO0806
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+	+<*> -<public_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
+
+[env:DuoWL_V2-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+	-D TASK_JUDO0806
+    -I src/tasks/taskJUDO0806
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
+
+; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
+
 [env:DuoWL_V3_GEN_ESPNOW]
 build_flags = 
     -D NECKLACE_V3
@@ -49,6 +77,48 @@ lib_deps =
 build_src_filter =
 	+<*> -<sample_tasks/*> -<private_tasks/*> +<sample_tasks/taskNeckGenESPNOW/>
 
+[env:DuoWL_V3_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V3
+	-D EN_MCP4018
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/private_tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+	+<*> -<public_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
+
+[env:DuoWL_V2_GEN_ESPNOW]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_GEN_ESPNOW
+    -I src/tasks/taskNeckGenESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckGenESPNOW/>
+
+[env:DuoWL_V2_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+	-D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+	${env.lib_deps}
+    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+build_src_filter =
+    +<*> -<tasks/*> +<tasks/taskNeckDemoESPNOW/>
 
 [env:BandWL_V3_GEN_ESPNOW]
 build_flags = 
@@ -58,7 +128,7 @@ build_flags =
 	-D DEBUG_WL
 	-D TASK_BAND_GEN_ESPNOW
 	; -D BAT_DEBUG
-    -I src/sample_tasks/taskBandGenESPNOW
+	    -I src/sample_tasks/taskBandGenESPNOW
 lib_ignore = MQTT_manager
 lib_deps = 
 	${env.lib_deps}
@@ -110,3 +180,32 @@ lib_deps =
 	${env.lib_deps}
 	256dpi/MQTT @ ^2.5.2
 
+
+;;;;; アーカイブ用 ;;;;;
+; ; デバイスごとの環境設定
+; [hidden_env:necklace]
+; build_flags = 
+; 	-D NECKLACE
+
+; [hidden_env:necklace_v1_3]
+; build_flags = 
+; 	-D NECKLACE_V2
+
+; ; アプリケーションごとの環境設定
+; [hidden_env:espnow]
+; build_flags = 
+; 	-D ESPNOW
+
+; [hidden_env:mqtt]
+; build_flags = 
+; 	-D MQTT
+
+
+
+; [hidden_env:BandWL_V2_GEN_ESPNOW]
+; build_flags = 
+;     -D BAND_V2
+;     -D ESPNOW
+; 	-D DEBUG_WL
+;     -D TASK_BAND_GEN_ESPNOW
+; lib_ignore = MQTT_manager
