--- a/src/private_tasks/platformio.private.ini
+++ b/src/private_tasks/platformio.private.ini
@@ -55,6 +55,17 @@ lib_deps =
 build_src_filter =
     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
 
+[env:DuoWL_V2-ESPNOW_JUDO0806]
+build_flags = 
+    -D NECKLACE_V2
+    -D ESPNOW
+    -D DEBUG_WL
+    -D TASK_JUDO0806
+    -I src/private_tasks/taskJUDO0806
+lib_ignore = MQTT_manager
+build_src_filter =
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
+
 [env:DuoWL_V3_DEMO_ESPNOW]
 build_flags = 
     -D NECKLACE_V3
