--- a/platformio.ini
+++ b/platformio.ini
@@ -33,39 +33,7 @@ build_flags =
 	-I include
 extra_scripts = pre:./extra_script.py
 
-; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
-
-[env:DuoWL_V3-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V3
-	-D EN_MCP4018
-    -D ESPNOW
-	-D DEBUG_WL
-	-D TASK_JUDO0806
-	    -I src/private_tasks/taskJUDO0806
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-	+<*> -<public_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
-
-[env:DuoWL_V2-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-	-D DEBUG_WL
-	-D TASK_JUDO0806
-    -I src/tasks/taskJUDO0806
-lib_ignore = MQTT_manager
-lib_deps = 
-	${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<tasks/*> +<tasks/taskJUDO0806/>
-
-; ; ; ; ; ; ; ESPNOW ; ; ; ; ; ; ; ; ; 
-
+; ; ; ; ; ; ; ESPNOW samples ; ; ; ; ; ; ; ; ; 
 [env:DuoWL_V3_GEN_ESPNOW]
 build_flags = 
     -D NECKLACE_V3
