--- a/src/private_tasks/platformio.private.ini
+++ b/src/private_tasks/platformio.private.ini
@@ -1,84 +1,98 @@
 ; Private tasks environments (can live in main)
 
-[env:MyPrivateTask]
+
+[env:DuoWL_V3_NECKDEAFLYMPICESPNOW]
 build_flags =
     -D NECKLACE_V3
-    -D ESPNOW
-    -D TASK_MY_PRIVATE
-    -I src/private_tasks/MyPrivateTask
-lib_ignore = MQTT_manager
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/MyPrivateTask/>
-
-[env:BandWL_V2-MQTT]
-build_flags = 
-    -D BAND_V2
-    -D MQTT
-    -D COLOR_SENSOR
-    -D INTERNET
-    -D DEBUG_WL
-    -D TASK_BAND_GEN_MQTT
-    -I src/private_tasks/taskBandGenMQTT
-lib_deps = 
-    ${env.lib_deps}
-    256dpi/MQTT @ ^2.5.2
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskBandGenMQTT/>
-
-[env:DuoWL_V3-Wired]
-build_flags = 
-    -D NECKLACE_V3
-    -D WIRED
-    -D DEBUG_WL
-    -D EN_MCP4018
-    -D TASK_NECK_GEN_WIRED
-    -I src/private_tasks/taskNeckGenWIRED
-lib_ignore = MQTT_manager
-lib_deps = 
-    ${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckGenWIRED/>
-
-[env:DuoWL_V3-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V3
     -D EN_MCP4018
     -D ESPNOW
     -D DEBUG_WL
-    -D TASK_JUDO0806
-    -I src/private_tasks/taskJUDO0806
+    -I src/private_tasks/taskNeckDeaflympicESPNOW
+    -D TASK_NECKDEAFLYMPICESPNOW
 lib_ignore = MQTT_manager
-lib_deps = 
+lib_deps =
     ${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
 build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
-
-[env:DuoWL_V2-ESPNOW_JUDO0806]
-build_flags = 
-    -D NECKLACE_V2
-    -D ESPNOW
-    -D DEBUG_WL
-    -D TASK_JUDO0806
-    -I src/private_tasks/taskJUDO0806
-lib_ignore = MQTT_manager
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
-
-[env:DuoWL_V3_DEMO_ESPNOW]
-build_flags = 
-    -D NECKLACE_V3
-    -D EN_MCP4018
-    -D ESPNOW
-    -D DEBUG_WL
-    -D TASK_NECK_DEMO_ESPNOW
-    -I src/private_tasks/taskNeckDemoESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-    ${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDeaflympicESPNOW/>
 
 
+; [env:MyPrivateTask]
+; build_flags =
+;     -D NECKLACE_V3
+;     -D ESPNOW
+;     -D TASK_MY_PRIVATE
+;     -I src/private_tasks/MyPrivateTask
+; lib_ignore = MQTT_manager
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/MyPrivateTask/>
+
+; [env:BandWL_V2-MQTT]
+; build_flags = 
+;     -D BAND_V2
+;     -D MQTT
+;     -D COLOR_SENSOR
+;     -D INTERNET
+;     -D DEBUG_WL
+;     -D TASK_BAND_GEN_MQTT
+;     -I src/private_tasks/taskBandGenMQTT
+; lib_deps = 
+;     ${env.lib_deps}
+;     256dpi/MQTT @ ^2.5.2
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskBandGenMQTT/>
+
+; [env:DuoWL_V3-Wired]
+; build_flags = 
+;     -D NECKLACE_V3
+;     -D WIRED
+;     -D DEBUG_WL
+;     -D EN_MCP4018
+;     -D TASK_NECK_GEN_WIRED
+;     -I src/private_tasks/taskNeckGenWIRED
+; lib_ignore = MQTT_manager
+; lib_deps = 
+;     ${env.lib_deps}
+;     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckGenWIRED/>
+
+; [env:DuoWL_V3-ESPNOW_JUDO0806]
+; build_flags = 
+;     -D NECKLACE_V3
+;     -D EN_MCP4018
+;     -D ESPNOW
+;     -D DEBUG_WL
+;     -D TASK_JUDO0806
+;     -I src/private_tasks/taskJUDO0806
+; lib_ignore = MQTT_manager
+; lib_deps = 
+;     ${env.lib_deps}
+;     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
+
+; [env:DuoWL_V2-ESPNOW_JUDO0806]
+; build_flags = 
+;     -D NECKLACE_V2
+;     -D ESPNOW
+;     -D DEBUG_WL
+;     -D TASK_JUDO0806
+;     -I src/private_tasks/taskJUDO0806
+; lib_ignore = MQTT_manager
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
+
+; [env:DuoWL_V3_DEMO_ESPNOW]
+; build_flags = 
+;     -D NECKLACE_V3
+;     -D EN_MCP4018
+;     -D ESPNOW
+;     -D DEBUG_WL
+;     -D TASK_NECK_DEMO_ESPNOW
+;     -I src/private_tasks/taskNeckDemoESPNOW
+; lib_ignore = MQTT_manager
+; lib_deps = 
+;     ${env.lib_deps}
+;     solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
+; build_src_filter =
+;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
