--- a/src/private_tasks/platformio.private.ini
+++ b/src/private_tasks/platformio.private.ini
@@ -9,6 +9,7 @@ build_flags =
     -D DEBUG_WL
     -I src/private_tasks/taskNeckDeaflympicESPNOW
     -D TASK_NECKDEAFLYMPICESPNOW
+    ; -D BAT_DEBUG
 lib_ignore = MQTT_manager
 lib_deps =
     ${env.lib_deps}
