chore: 環境設定を更新し、不要な音声ファイルを削除

--- a/src/private_tasks/platformio.private.ini
+++ b/src/private_tasks/platformio.private.ini
@@ -17,6 +17,37 @@ build_src_filter =
     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDeaflympicESPNOW/>
 
 
+[env:DuoWL_V2_NECKDEAFLYMPICESPNOW]
+build_flags =
+    -D NECKLACE_V2
+    -D ESPNOW
+    -D DEBUG_WL
+    -I src/private_tasks/taskNeckDeaflympicESPNOW
+    -D TASK_NECKDEAFLYMPICESPNOW
+    ; -D BAT_DEBUG
+lib_ignore = MQTT_manager
+lib_deps =
+    ${env.lib_deps}
+build_src_filter =
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDeaflympicESPNOW/>
+
+
+
+[env:DuoWL_V3_DEMO_ESPNOW]
+build_flags = 
+    -D NECKLACE_V3
+    -D EN_MCP4018
+    -D ESPNOW
+    -D DEBUG_WL
+    -D TASK_NECK_DEMO_ESPNOW
+    -I src/private_tasks/taskNeckDemoESPNOW
+lib_ignore = MQTT_manager
+lib_deps = 
+    ${env.lib_deps}
+build_src_filter =
+    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
+
+
 ; [env:MyPrivateTask]
 ; build_flags =
 ;     -D NECKLACE_V3
@@ -82,18 +113,3 @@ build_src_filter =
 ; lib_ignore = MQTT_manager
 ; build_src_filter =
 ;     +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskJUDO0806/>
-
-[env:DuoWL_V3_DEMO_ESPNOW]
-build_flags = 
-    -D NECKLACE_V3
-    -D EN_MCP4018
-    -D ESPNOW
-    -D DEBUG_WL
-    -D TASK_NECK_DEMO_ESPNOW
-    -I src/private_tasks/taskNeckDemoESPNOW
-lib_ignore = MQTT_manager
-lib_deps = 
-    ${env.lib_deps}
-    solderedelectronics/Soldered MCP4018 Arduino Library @ ^1.0.1
-build_src_filter =
-    +<*> -<sample_tasks/*> -<private_tasks/*> +<private_tasks/taskNeckDemoESPNOW/>
